ingress/traefik_values.yaml
# Create an IngressRoute for the dashboard
ingressRoute:
  dashboard:
    enabled: true
    # Custom match rule with host domain
    matchRule: Host(`traefik-dashboard.audioprodhub.com`)
    entryPoints: ["websecure", "web"]
    tls:
      certResolver: letsencrypt
    annotations:
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Add custom middlewares : authentication and redirection
    middlewares:
    - name: traefik-dashboard-auth

rbac:
  enabled: true

service:
    type: LoadBalancer  # Expose via LoadBalancer for public access
    annotations:
      service.beta.kubernetes.io/aws-load-balancer-internal: "false" # Public facing LB

# Set up entry points (web for HTTP, websecure for HTTPS)
entryPoints:
  web:
    address: ":80"
    # Enable redirection from HTTP to HTTPS
    http:
      redirections:
        entryPoint:
          to: websecure
          scheme: https
  websecure:
    address: ":443"
    http:
      tls:
        certResolver: letsencrypt  # This refers to the Cert-manager configuration for Let's Encrypt

# Enable HTTPS
providers:
  kubernetesIngress:
    publishedService:
      enabled: true  # Ensure Traefik uses the external LoadBalancer IP for Ingress


# Create the custom middlewares used by the IngressRoute dashboard (can also be created in another way).
# /!\ Yes, you need to replace "changeme" password with a better one. /!\
extraObjects:
- apiVersion: v1
  kind: Secret
  metadata:
    name: traefik-dashboard-auth-secret
  type: kubernetes.io/basic-auth
  stringData:
    username: admin
    password: els-ingress

- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    name: traefik-dashboard-auth
  spec:
    basicAuth:
      secret: traefik-dashboard-auth-secret

deployment:
  replicas: null
resources:
  requests:
    cpu: "100m"
    memory: "50Mi"
  limits:
    cpu: "300m"
    memory: "150Mi"
autoscaling:
  enabled: true
  maxReplicas: 2
  metrics:
  - type: Resource
    resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 80

# Enable HTTPS using Let's Encrypt
certificatesResolvers:
  letsencrypt:
    acme:
      email: gdcronix@gmail.com  # Replace with your email
      storage: /data/acme.json
      tlsChallenge: 
        enabled: true
      httpChallenge:             # Use HTTP-01 challenge with Cert-manager and Traefik
        entryPoint: web 

# Enable Prometheus metrics
metrics:
  prometheus:
    enabled: true

# Enable logs for troubleshooting
logs:
  general:
    level: INFO
  access:
    enabled: true
    format: json
