ingress/traefik_routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-routes
  namespace: traefik   # Has to be same namespace as where traefik is installed
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Link to Cert-manager ClusterIssuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: audioprodhub.com
    http:
      paths:
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 5000
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 5001
  tls:
    - hosts:
        - audioprodhub.com
      secretName: audioprodhub-tls

  ingressClassName: traefik

      # - path: /shop
#   pathType: Prefix
#   backend:
#     service:
#       name: shop-service
#       port:
#         number: 80
